--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
             <li>
               <a href="https://drive.google.com/file/d/1BM9oVrQY7h-5IDNe0hE77Flo3G7E4duq/view?usp=sharing" target="_blank" type="button" class="cta">Download CV</a>
             </li>
+            <li>
+              <a href="https://github.com/AK1003018" target="_blank" type="button" class="cta">LinkedIn</a>
+            </li>
           </ul>
         </nav>
       </div>
