--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               <a href="https://drive.google.com/file/d/1BM9oVrQY7h-5IDNe0hE77Flo3G7E4duq/view?usp=sharing" target="_blank" type="button" class="cta">Download CV</a>
             </li>
             <li>
-              <a href="https://github.com/AK1003018" target="_blank" type="button" class="cta">LinkedIn</a>
+              <a href="https://github.com/AK1003018" target="_blank" type="button" class="cta">GitHub</a>
             </li>
           </ul>
         </nav>
