--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
               <a href="https://www.linkedin.com/in/anishkolhe18/" target="_blank" type="button" class="cta">LinkedIn</a>
             </li>
             <li>
-              <a href="https://docs.google.com/document/d/15nFCaBecYtRkw2uxM_b8YG38wKz8nA2jIb3tcxECI-E/edit?usp=sharing" target="_blank" type="button" class="cta">Download CV</a>
+              <a href="https://drive.google.com/file/d/1bRLj_jll6WhqFtRTIQxueb1_ddEi5jjZ/view?usp=sharing" target="_blank" type="button" class="cta">Download CV</a>
             </li>
             <li>
               <a href="https://github.com/AK1003018" target="_blank" type="button" class="cta">GitHub</a>
