--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
               </div>
           <div class="headings">
             <h1>Anish Kolhe<span></span></h1>
-            <p>-Developer<span></span></p>
+            <p>-Cycling my time between artist and tinkerer.
+Currently I’m obsessed with finding the right
+abstractions and patterns to work with large language models.<span></span></p>
           </div>
           
         </div>
