--- a/index.html
+++ b/index.html
@@ -19,10 +19,9 @@
                 <img src="a.jpeg" alt="Profile Photo"/>
               </div>
           <div class="headings">
-            <h1>Anish Kolhe<span></span></h1>
+            <h1>Anish Kolhe<span></span></h1> <br>
             <p>-Cycling my time between artist and tinkerer.
-Currently I’m obsessed with finding the right
-abstractions and patterns to work with large language models.<span></span></p>
+              <br>Currently I’m obsessed with finding the right abstractions and patterns to work with large language models.<span></span></p>
           </div>
           
         </div>
