--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
               </div>
           <div class="headings">
             <h1>Anish Kolhe<span></span></h1> <br>
-            <p>-Cycling my time between artist and tinkerer.
-              <br>Currently I’m obsessed with finding the right abstractions and patterns to work with large language models.<span></span></p>
+            <p>-Cycling my time between artist and tinkerer.<span></span></p>
           </div>
           
         </div>
